{
    "name": "MyUIInputSystem",
    "maps": [
        {
            "name": "UI",
            "id": "8a301118-c138-40bc-8131-f1ee1bcc3e30",
            "actions": [
                {
                    "name": "PauseToggle",
                    "type": "Button",
                    "id": "d12fdb0a-9cf5-4693-af65-200f292f5a0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "22c846c8-387b-427e-8aa0-b109ecaf7e77",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37f662f4-c834-45cf-8c21-3e263292793b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}